@startuml DC_CampusEats
title Diagramme de Classes — CampusEats

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam class {
  BackgroundColor White
  BorderColor Black
}

' ===== CLASSES =====

' Membre 1 — Authentification
class Etudiant #LightBlue {
  - id : int
  - nom : String
  - prenom : String
  - email : String
  - motDePasse : String
  - solde : double
  - connecte : boolean
  --
  + sInscrire(nom, prenom, email, mdp) : boolean
  + seConnecter(email, mdp) : boolean
  + seDeconnecter() : void
  + rechargerSolde(montant) : void
  + debiterSolde(montant) : boolean
  + afficherProfil() : void
}

' Membre 2 — Menu
class Menu #LightGreen {
  - id : int
  - date : String
  - cuisinier : String
  - plats : List<Plat>
  --
  + ajouterPlat(plat) : void
  + supprimerPlat(platId) : boolean
  + afficherMenu() : void
  + rechercherPlat(platId) : Plat
  + getPlatsDisponibles() : List<Plat>
  + verifierAlertesStock() : void
}

class Plat #LightGreen {
  - id : int
  - nom : String
  - prix : double
  - stock : int
  - categorie : String
  - disponible : boolean
  --
  + afficherDetails() : void
  + reduireStock(quantite) : boolean
  + reapprovisionner(quantite) : void
}

' Membre 3 — Commande
class Commande #LightYellow {
  - id : int
  - heureCommande : String
  - total : double
  - statut : Statut
  - platsCommandes : List<Plat>
  --
  + ajouterPlat(plat) : boolean
  + calculerTotal() : double
  + passerCommande() : boolean
  + annulerCommande() : boolean
  + afficherDetails() : void
}

enum Statut #LightYellow {
  EN_ATTENTE
  EN_PREPARATION
  PRETE
  LIVREE
  ANNULEE
}

' Membre 4 — Livraison
class Livraison #LightSalmon {
  - id : int
  - nomLivreur : String
  - statut : StatutLivraison
  - heureLivraison : String
  - pointRetrait : String
  --
  + demarrerLivraison() : boolean
  + confirmerLivraison(heure) : boolean
  + signalerEchec(raison) : void
  + afficherStatut() : void
  + mettreAJourStatut(statut) : void
}

enum StatutLivraison #LightSalmon {
  EN_ATTENTE
  EN_COURS
  LIVREE
  ECHEC
}

' Membre 5 — Admin
class Admin #Lavender {
  - id : int
  - nom : String
  - email : String
  --
  + afficherTableauDeBord() : void
  + calculerRevenusJour() : double
  + compterLivraisonsEnCours() : int
  + listerEtudiants() : void
  + listerCommandes() : void
  + verifierAlertes() : void
  + afficherStats() : void
}

' ===== RELATIONS =====

' Composition : Menu contient des Plats
Menu "1" *-- "0..*" Plat : contient >

' Association : Commande référence Etudiant et Plats
Etudiant "1" -- "0..*" Commande : passe >
Commande "1" o-- "1..*" Plat : commande >

' Composition : Livraison associée à une Commande
Commande "1" -- "1" Livraison : génère >

' Enum
Commande -- Statut : possède >
Livraison -- StatutLivraison : possède >

' Admin gère tout
Admin "1" -- "0..*" Etudiant : gère >
Admin "1" -- "0..*" Commande : supervise >
Admin "1" -- "0..*" Livraison : supervise >

@enduml
